--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://filad.github.com
+url: http://dev.filkor.org
 title: filkor.org Writings
 subtitle: A blogging framework for hackers.
 author: filkor
@@ -89,11 +89,11 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
+disqus_short_name: filkor
 disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-31462044-4
 
 # Facebook Like
 facebook_like: false
